Blackpurl/src/objects/Vendor_Order_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>CO_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Header</label>
        <referenceTo>CO_Header__c</referenceTo>
        <relationshipLabel>Vendor Order Line Items</relationshipLabel>
        <relationshipName>Vendor_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CO_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Line Item</label>
        <referenceTo>CO_Line_Item__c</referenceTo>
        <relationshipLabel>Vendor Order Line Items</relationshipLabel>
        <relationshipName>Vendor_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <formula>IF(Part__c != null, Part__r.Last_Cost__c, IF(Sublet__c != null, 
if( ISPICKVAL(Sublet__r.Cost_Method__c, &apos;Percent Retail&apos;), Service_Order_Line_Item__r.Kit_Price__c * Sublet__r.Cost__c / 100, Sublet__r.Cost__c), 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <formula>IF( Is_required_For_Customer__c || Is_Service__c , CO_Header__r.Customer_Name__c , Dealer_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <description>Dealer Name</description>
        <label>Dealer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Excess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Excess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_From_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is From Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_required_For_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is required For Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_Item_Cost__c</fullName>
        <label>Line Item Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Item_Status__c</fullName>
        <formula>IF( 
	AND(
		Qty_Needed__c == Received__c,
		OR(
			Receiving_Status__c == &apos;Stocked&apos;,
			Receiving_Status__c == &apos;Invoiced&apos;
		)
	),
	&apos;Stocked&apos;,
	IF(
		AND(
			Received__c &gt; 0,
			Receiving_Status__c == &apos;In Progress&apos;
		),
		&apos;In Receiving&apos;,
		IF(
			Vendor_Order_Line_Item_Group__c != null,
			&apos;On Order&apos;,
			&apos;Open&apos;
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needed_For__c</fullName>
        <formula>IF( Is_required_For_Customer__c || Is_Service__c , CO_Header__r.Name , &apos;STOCK&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Needed For</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outstanding__c</fullName>
        <label>Outstanding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Vendor Order Line Items</relationshipLabel>
        <relationshipName>Vendor_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_Delivery__c</fullName>
        <label>Projected Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qty_Needed__c</fullName>
        <label>Qty Needed</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_Ordered__c</fullName>
        <label>Qty Ordered</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received__c</fullName>
        <label>Received Qty</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receiving_Status__c</fullName>
        <formula>TEXT(Vendor_Receiving_Group__r.Vendor_Receiving_Header__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receiving Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Tag__c</fullName>
        <description>Search Tag</description>
        <label>Search Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Line Item</label>
        <referenceTo>Service_Order_Line_Item__c</referenceTo>
        <relationshipLabel>Vendor Order Line Items</relationshipLabel>
        <relationshipName>Vendor_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>On Order</fullName>
                </value>
                <value>
                    <fullName>Partially Received</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sublet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sublet Type Vendor Product</description>
        <label>Sublet</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product__c.Type__c</field>
                <operation>equals</operation>
                <value>Sublet</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Vendor Order Line Items</relationshipLabel>
        <relationshipName>Vendor_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Qty_Needed__c * Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <formula>IF( Part__c != null, Part__r.Vendor__r.Vendor_Code__c,IF( Sublet__c != null, Sublet__r.Vendor__r.Vendor_Code__c, &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Order_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Order Header</label>
        <referenceTo>Vendor_Order_Header__c</referenceTo>
        <relationshipLabel>Vendor Order Line Items</relationshipLabel>
        <relationshipName>Vendor_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Order_Line_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Order Line Item Group</label>
        <referenceTo>Vendor_Order_Line_Item_Group__c</referenceTo>
        <relationshipLabel>Vendor Order Line Items</relationshipLabel>
        <relationshipName>Vendor_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Receiving_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Receiving Group</label>
        <referenceTo>Vendor_Receiving_Group__c</referenceTo>
        <relationshipLabel>Vendor Order Line Items</relationshipLabel>
        <relationshipName>Vendor_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vo_Line_Item_Status__c</fullName>
        <formula>IF(Vendor_Order_Line_Item_Group__c !=null , 
IF(Vendor_Receiving_Group__c !=null, 
IF(ISPICKVAL( Vendor_Receiving_Group__r.Vendor_Receiving_Header__r.Status__c ,&apos;Stocked&apos;),5,4), 
IF(ISPICKVAL(Vendor_Order_Line_Item_Group__r.Vendor_Order_Header__r.Status__c,&apos;Open&apos;) || ISPICKVAL(Vendor_Order_Line_Item_Group__r.Vendor_Order_Header__r.Status__c,&apos;Locked&apos;),2,3)), 
1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vo Line Item Status</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Vendor Order Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Part__c</columns>
        <columns>Vendor_Order_Header__c</columns>
        <columns>Qty_Needed__c</columns>
        <columns>Qty_Ordered__c</columns>
        <columns>Is_Excess__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VOLI-{00000000}</displayFormat>
        <label>Vendor Order Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Order Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>